[package]
name = "laplacian"
version = "0.1.0"
edition = "2021"

[dependencies]
alg = { git = "https://github.com/shunski/toppo.git" }
topo_spaces = { git = "https://github.com/shunski/toppo.git" }
geom = { git = "https://github.com/shunski/toppo.git" }
analysis = { git = "https://github.com/shunski/toppo.git" }
rand = "*"
plotters = "*"
